recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: not found: value step
		current(step) 
                        ^Tree:11: error: not enough arguments for method subtree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
		 subtree()
                        ^Tree:15: error: not found: value lenght
		recule(lenght)
                       ^