recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if(steps==0){
		
	}
	else {

		current(step) 
		tree(steps, shrink*length, angle, shrink)
		droite(angle)
		 subtree()
		tree(steps, shrink*length, angle, shrink)
		gauche(2*angle)
		tree(steps, shrink*length, angle, shrink)
		recule(lenght)
	}
}
